# starter-resource-server/src/environment/prod.ts
@@ -3,5 +3,22 @@ export const environment = {
     uploadDir: process.env.UPLOAD_DIR,
     mongoUrl: process.env.MONGO_URL,
     jwtSecret: process.env.JWT_SECRET,
-    swagger: process.env.SWAGGER_GENERATED
+    swagger: process.env.SWAGGER_GENERATED,
+    swaggerPath: process.env.SWAGGER_PATH,
+    swaggerOptions: {
+      swaggerOptions: {
+        authAction: {
+          JWT: {
+            name: 'JWT',
+            schema: {
+              type: 'apiKey',
+              in: 'header',
+              name: 'Authorization',
+              description: ''
+            },
+            value: 'Bearer <my own JWT token>'
+          }
+        }
+      }
+    }
 };
