# starter-resource-server/src/generated/swagger.yml
@@ -8,6 +8,12 @@ basePath: "/"
 schemes:
     - http
     - https
+
+securityDefinitions:
+    bearerAuth:
+        type: "apiKey"
+        name: "Authorization"
+        in: "header"
 consumes:
     - application/json
 produces:
@@ -61,6 +67,50 @@ definitions:
                 $ref: '#/definitions/UserPushBody'
             pull:
                 $ref: '#/definitions/UserPullBody'
+    Todo:
+        type: object
+        properties:
+            title:
+                type: string
+            done:
+                type: boolean
+            owner:
+                type: string
+            json:
+                type: object
+    TodoCreateBody:
+        type: object
+        properties:
+            title:
+                type: string
+            done:
+                type: boolean
+            json:
+                type: object
+    TodoChangesBody:
+        type: object
+        properties:
+            title:
+                type: string
+            done:
+                type: boolean
+            json:
+                type: object
+    TodoPushBody:
+        type: object
+    TodoPullBody:
+        type: object
+    TodoUpdateBody:
+        type: object
+        properties:
+            id:
+                type: string
+            changes:
+                $ref: '#/definitions/TodoChangesBody'
+            push:
+                $ref: '#/definitions/TodoPushBody'
+            pull:
+                $ref: '#/definitions/TodoPullBody'
     AddIdBody:
         type: object
         properties:
@@ -76,12 +126,12 @@ definitions:
     RemoveIdBody:
         type: object
         properties:
-            addId:
+            removeId:
                 type: string
     RemoveIdsBody:
         type: object
         properties:
-            addIds:
+            removeIds:
                 type: array
                 items:
                     type: string
@@ -90,13 +140,20 @@ definitions:
 paths:
     /users:
         get:
+            security:
+              - bearerAuth: []
+            tags: ['User']
             description: "sample description"
             responses:
                 '200':
                     description: "not provided."
                     schema:
-                        type: object
+                schema:
+                  type: array
+                  items:
+                    $ref: '#/definitions/User'
         post:
+            tags: ['User']
             description: "sample description"
             parameters:
                 - name: body
@@ -108,9 +165,13 @@ paths:
                 '200':
                     description: "not provided."
                     schema:
-                        type: object
+                schema:
+                  $ref: '#/definitions/User'
     /users/{id}:
         get:
+            security:
+              - bearerAuth: []
+            tags: ['User']
             description: "sample description"
             parameters:
                 - name: id
@@ -122,8 +183,12 @@ paths:
                 '200':
                     description: "not provided."
                     schema:
-                        type: object
+                schema:
+                  $ref: '#/definitions/User'
         put:
+            security:
+              - bearerAuth: []
+            tags: ['User']
             description: "sample description"
             parameters:
                 - name: id
@@ -141,5 +206,114 @@ paths:
                 '200':
                     description: "not provided."
                     schema:
-                        type: object
+                schema:
+                  $ref: '#/definitions/User'
+
+    /todos:
+        get:
+            security:
+              - bearerAuth: []
+            tags: ['Todo']
+            description: "sample description"
+            responses:
+                '200':
+                    description: "not provided."
+                    schema:
+                schema:
+                  type: array
+                  items:
+                    $ref: '#/definitions/Todo'
+        post:
+            security:
+              - bearerAuth: []
+            tags: ['Todo']
+            description: "sample description"
+            parameters:
+                - name: body
+                  description: "Not provided"
+                  in: body
+                  schema:
+                    $ref: '#/definitions/TodoCreateBody'
+            responses:
+                '200':
+                    description: "not provided."
+                    schema:
+                schema:
+                  $ref: '#/definitions/Todo'
+    /todos/{id}:
+        get:
+            security:
+              - bearerAuth: []
+            tags: ['Todo']
+            description: "sample description"
+            parameters:
+                - name: id
+                  in: path
+                  required: true
+                  description: "Not provided"
+                  type: string
+            responses:
+                '200':
+                    description: "not provided."
+                    schema:
+                schema:
+                  $ref: '#/definitions/Todo'
+        put:
+            security:
+              - bearerAuth: []
+            tags: ['Todo']
+            description: "sample description"
+            parameters:
+                - name: id
+                  in: path
+                  required: true
+                  description: "Not provided"
+                  type: string
+
+                - name: body
+                  description: "Not provided"
+                  in: body
+                  schema:
+                    $ref: '#/definitions/TodoUpdateBody'
+            responses:
+                '200':
+                    description: "not provided."
+                    schema:
+                schema:
+                  $ref: '#/definitions/Todo'
+        delete:
+            security:
+              - bearerAuth: []
+            tags: ['Todo']
+            description: "sample description"
+            parameters:
+                - name: id
+                  in: path
+                  required: true
+                  description: "Not provided"
+                  type: string
+            responses:
+                '200':
+                    description: "not provided."
+                    schema:
+                schema:
+                  $ref: '#/definitions/Todo'
+    /todos/{id}/owner:
+        get:
+            security:
+              - bearerAuth: []
+            tags: ['Todo']
+            description: "sample description"
+            parameters:
+                - name: id
+                  in: path
+                  required: true
+                  description: "Not provided"
+                  type: string
+            responses:
+                '200':
+                    description: "not provided."
+                    schema:
+                schema:
+                  $ref: '#/definitions/Todo'
 
