# starter-resource-server/src/modules/use/service.ts
@@ -9,6 +9,8 @@ import { applyUserAPI } from '../../generated/user/user';
 import { prettifyRouter } from '../../common/api-gen/prettier';
 import { mainPassportService } from '../passport/service';
 import { L } from '../../common/logger';
+import { applyTodoAPI, mainTodoService } from '../../generated/todo/todo';
+import { TodoSchema } from '../../generated/types';
 
 const {
 } = environment;
@@ -24,7 +26,10 @@ export class UseService extends Singleton {
 
     async use(app: Application) {
 
-        const jwtMiddleware = mainPassportService.jwt();
+        const todoOwner = mainPassportService.owner(
+            TodoSchema,
+            { key: 'Todo', on: mainTodoService.utils, name: 'todos' }
+        );
         
         await mainMongoService.init();
         L.info(`DB: ${mainMongoService.url} connected.`);
@@ -32,9 +37,8 @@ export class UseService extends Singleton {
         app.use(initContextMiddleware, passport.initialize());
         mainPassportRouter.applyRouter(app, '/auth');
         
-        applyUserAPI(app, {
-            jwtMiddleware,
-        }, prettifyRouter, 'users', console);
+        applyUserAPI(app, {}, prettifyRouter, 'users', console);
+        applyTodoAPI(app, { todoOwner }, prettifyRouter, 'todos', console);
 
     }
 }
